<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Description">
    <item
        android:id="@+id/desc_action_back"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        android:orderInCategory="200"
        android:title="Return"
        app:showAsAction="always" />
</menu>